# server/docs/swagger.json
@@ -1,19 +1,13 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "A video service made using gin-gonic",
+        "title": "Jirafeitor API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "giraffe.niliara.net",
+    "basePath": "/api",
     "paths": {
         "/login": {
             "post": {
@@ -128,7 +122,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/user": {
+        "/user/{id}}": {
             "get": {
                 "tags": [
                     "Login"
@@ -138,7 +132,7 @@ const docTemplate = `{
                         "type": "integer",
                         "description": "Video ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -158,7 +152,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/video/info": {
+        "/video/info/{id}": {
             "get": {
                 "tags": [
                     "Videos"
@@ -168,7 +162,7 @@ const docTemplate = `{
                         "type": "integer",
                         "description": "Video ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -188,7 +182,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/video/source": {
+        "/video/source/{id}": {
             "get": {
                 "tags": [
                     "Videos"
@@ -198,7 +192,7 @@ const docTemplate = `{
                         "type": "integer",
                         "description": "Video ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -218,7 +212,7 @@ const docTemplate = `{
                 }
             }
         },
-        "/video/thumbnail": {
+        "/video/thumbnail/{id}": {
             "get": {
                 "tags": [
                     "Videos"
@@ -228,7 +222,7 @@ const docTemplate = `{
                         "type": "integer",
                         "description": "Video ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -359,22 +353,4 @@ const docTemplate = `{
             "in": "header"
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "localhost:8080",
-	BasePath:         "/api",
-	Schemes:          []string{},
-	Title:            "Jirafeitor API",
-	Description:      "A video service made using gin-gonic",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
